syntax = "proto3";

package NYP.NClient.NApi.NProto;

import "yt/core/yson/proto/protobuf_interop.proto";
import "yt/core/ytree/proto/attributes.proto";

import "yp/client/api/proto/conditions.proto";
import "yp/client/api/proto/data_model.proto";

option python_package = "yp_proto.yp.client.api.proto";

option go_package = "a.yandex-team.ru/yp/go/proto/api";

option java_package = "ru.yandex.yp.client.api";
option java_outer_classname = "Deploy";
option java_multiple_files = true;

message TDeployProgress
{
    // Number of pods synced to up-to-date spec.
    uint32 pods_ready = 1;
    // Number of pods currently updating.
    uint32 pods_in_progress = 2;
    // Total number of pods.
    uint32 pods_total = 3;
}

message TControllerAttempt
{
    NYP.NClient.NApi.NProto.TCondition succeeded = 1;
}

message TControllerStatus
{
    TControllerAttempt last_attempt = 1;
}

message TDeployStatusDetails
{
    TDeployProgress total_progress = 1;
    TDeployProgress current_revision_progress = 2;
    TControllerStatus controller_status = 3;
    map<uint64, TDeployProgress> revisions = 4;
}

message TClusterDeployStatus
{
    TDeployStatusDetails details = 1;
    string pod_set_id = 2;
}

message TPodTemplateSpec
{
    TPodSpec spec = 1;
    NYT.NYTree.NProto.TAttributeDictionary labels = 2;
    NYT.NYTree.NProto.TAttributeDictionary annotations = 3;
}
